; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mapi32/extr_sendmail.c_convert_to_unicode.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mapi32/extr_sendmail.c_convert_to_unicode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @convert_to_unicode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @convert_to_unicode(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %25

9:                                                ; preds = %1
  %10 = load i32, i32* @CP_ACP, align 4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @MultiByteToWideChar(i32 %10, i32 0, i32 %11, i32 -1, i32* null, i32 0)
  store i32 %12, i32* %5, align 4
  %13 = call i32 (...) @GetProcessHeap()
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 %15, 4
  %17 = trunc i64 %16 to i32
  %18 = call i32* @HeapAlloc(i32 %13, i32 0, i32 %17)
  store i32* %18, i32** %4, align 8
  %19 = load i32, i32* @CP_ACP, align 4
  %20 = load i32, i32* %3, align 4
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @MultiByteToWideChar(i32 %19, i32 0, i32 %20, i32 -1, i32* %21, i32 %22)
  %24 = load i32*, i32** %4, align 8
  store i32* %24, i32** %2, align 8
  br label %25

25:                                               ; preds = %9, %8
  %26 = load i32*, i32** %2, align 8
  ret i32* %26
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i32, i32, i32*, i32) #1

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
